--- a/event/templates/event.html
+++ b/event/templates/event.html
@@ -2,9 +2,8 @@
 
 {% block content %}
 
-{% for event in object_list %}
 
-<h2><a href="/event/{{post.id}}">{{ event.title }}</a></h2>
+<h2><a href="/events/{{event.id}}">{{ event.title }}</a></h2>
 
 <div class="event_meta">
   on {{ event.created }}
@@ -14,13 +13,11 @@
   {{ event.body|safe|linebreaks }}
 </div>
 
-<div class="tags">
+<div class="event_tags">
   {% for tag in event.tags.all %}
-  <a href="/event/tag/{{tag}}">{{tag}}</a>
+  <a href="/events/tag/{{tag}}">{{tag}}</a>
   {% if not forloop.last %}, {% endif %}
   {% endfor %}
 </div>
-
-{% endfor %}
 
 {% endblock %}
