--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
+{% for event in object_list %}
 
-<h2><a href="/event/{{event.id}}">{{ event.title }}</a></h2>
+<h2><a href="/events/{{event.id}}">{{ event.title }}</a></h2>
 
 <div class="event_meta">
   on {{ event.created }}
@@ -19,5 +20,7 @@
   {% if not forloop.last %}, {% endif %}
   {% endfor %}
 </div>
+
+{% endfor %}
 
 {% endblock %}
