--- a/event/templates/event.html
+++ b/event/templates/event.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<h2><a href="/events/{{event.id}}">{{ event.title }}</a></h2>
+<h2><a href="/event/{{event.id}}">{{ event.title }}</a></h2>
 
 <div class="event_meta">
   on {{ event.created }}
@@ -15,7 +15,7 @@
 
 <div class="event_tags">
   {% for tag in event.tags.all %}
-  <a href="/events/tag/{{tag}}">{{tag}}</a>
+  <a href="/event/tag/{{tag}}">{{tag}}</a>
   {% if not forloop.last %}, {% endif %}
   {% endfor %}
 </div>
