--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
-{% block content %}
 
+{% block title %}
+<title>USF Event - Homepage</title>
+{% endblock %}
+
+{% block content %}
 {% for event in object_list %}
 
 <h2><a href="/event/{{event.id}}">{{ event.title }}</a></h2>
