--- a/event/templates/base.html
+++ b/event/templates/base.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-<div class="container_12">
-<div class="grid_3"><h1>USF Event hub</h1></div>
+<div class="container_12" style="padding-top: 50px;">
+<div class="grid_3"><h1><a href="/event">USF Event Functional Demo</a></h1>
+<h4><a href="/admin">Superuser Login</a></h4>
+<h4><a href="/event/archives">Event archives</a></h4>
+</div>
 
 <div class="grid_9">
 {% block content %}
