--- a/event/templates/event.html
+++ b/event/templates/event.html
@@ -6,18 +6,23 @@
 <h2><a href="/event/{{event.id}}">{{ event.title }}</a></h2>
 
 <div class="event_meta">
-  on {{ event.created }}
+  Event submitted on {{ event.created }}
 </div>
-
+<br/>
 <div class="event_body">
   {{ event.body|safe|linebreaks }}
 </div>
 
 <div class="event_tags">
+  This event is tagged with 
   {% for tag in event.tags.all %}
   <a href="/event/tag/{{tag}}">{{tag}}</a>
   {% if not forloop.last %}, {% endif %}
   {% endfor %}
+</div>
+
+<div class="event_navi">
+<a href="/admin/event/event/{{event.id}}">Edit this event</a>
 </div>
 
 {% endblock %}
