--- a/event/templates/tag_single.html
+++ b/event/templates/tag_single.html
@@ -6,7 +6,8 @@
 
 {% for event in events %}
 
-<p>{{ event.created|date:"Y-m-d" }}: <a href="/event/{{event.id}}">{{ event.title }}</a></p>
+<p>{{ event.created|date:"Y-m-d" }}: 
+<a href="{% url 'single' event.id %}">{{ event.title }}</a></p>
 
 {% endfor %}
 
