--- a/event/templates/event_single.html
+++ b/event/templates/event_single.html
@@ -16,7 +16,7 @@
 <div class="event_tags">
   This event is tagged with 
   {% for tag in event.tags.all %}
-  <a href="/event/tag/{{tag}}">{{tag}}</a>
+  <a href="{% url 'tag' tag %}">{{tag}}</a>
   {% if not forloop.last %}, {% endif %}
   {% endfor %}
 </div>
