--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
 <h1>User Profile</h1>
-        <p>Name: {{ user.name }}</p>
+        <p>Name: {{ user.last_name }}</p>
+{% endblock %}
 
