Fixed template URL path reference

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -29,7 +29,7 @@
     <table border="0" cellpadding="0" >
         {{form.as_table}}        
     </table>
-    <p> <a href="{%url register%}">register</a> <a href="{%url index%}">return to index</a> <input type="submit" value="login"/></p>
+    <p> <a href="{%url accounts.views.register%}">register</a> <a href="{%url accounts.views.index%}">return to index</a> <input type="submit" value="login"/></p>
     </form>
             
 			</div>
