--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -53,7 +53,7 @@
    
 
 
-    <p> <a href="{%url login%}">login</a> <a href="{%url index%}">return to index</a> <input type="submit" value="register"/></p>
+    <p> <a href="{% url accounts.views.login %}">login</a> <a href="{% url accounts.views.index %}">return to index</a> <input type="submit" value="register"/></p>
     </form>
             
 			</div>
