--- a/templates/event/event_listview.html
+++ b/templates/event/event_listview.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% for event in object_list %}
+{% for event in events %}
 
 <p>{{ event.created|date:"Y-m-d" }}: 
 <a href="{% url 'single' event.id %}">
