Fixed tag related stuff

--- a/templates/event/event_listview.html
+++ b/templates/event/event_listview.html
@@ -5,8 +5,8 @@
 {% for event in events %}
 
 <p>{{ event.created|date:"Y-m-d" }}: 
-<a href="{% url 'single' event.id %}">
-{{ event.title }}</a></p>
+<a href="">{{ event.title }}</a>
+</p>
 
 {% endfor %}
 
