Updated minor URL hardcode

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <div class="container_16" style="padding-top: 50px;">
 <div class="grid_4"><h1><a href="/event">USF Event Functional Demo</a></h1>
 <h4><a href="/admin">Superuser Login</a></h4>
-<h4><a href="/event/archives">Event archives</a></h4>
+<h4><a href="/events/archives">Event archives</a></h4>
 </div>
 
 <div class="grid_12">
