--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -47,6 +47,15 @@
 
 	   <tr><th><label for="id_interest">Interest:</label></th><td><input id="id_interest" maxlength="30" type="text" name="interest" size="20" /></td></tr>
 
+	   <tr>
+      <th><label for="id_preference">Preferences:</label></th>
+      <input type="checkbox" name="preferences" value="lectures" checked/>Lectures
+      <input type="checkbox" name="preferences" value="greek life" />Greek Life
+      <input type="checkbox" name="preferences" value="clubs" />Clubs
+
+
+   	  </tr>
+
       
     </table>
        
