post image on backend and frontend; including fields of title,body,date, not including tags

--- a/templates/accounts/welcome.html
+++ b/templates/accounts/welcome.html
@@ -59,6 +59,8 @@
     {% for event in eventPreferenced %}
     <p>Event Title: {{event.title}}</p>
     <p>Event Body: {{event.body}}</p>
+    <p>Event Image: <img src="http://127.0.0.1:8080/webhost_media/{{event.image1}}"/></p>
+
     <br><br>
 
 
