Added image display on single event pages

--- a/templates/event/event_single.html
+++ b/templates/event/event_single.html
@@ -11,6 +11,7 @@
 <br/>
 <div class="event_body">
   {{ event.body|safe|linebreaks }}
+  <p><img src="/webhost_media/{{event.image1}}" width="500"/></p>
 </div>
 
 
