Fixed harcoded event url

--- a/templates/event/event_listview.html
+++ b/templates/event/event_listview.html
@@ -5,7 +5,7 @@
 {% for event in events %}
 
 <p>{{ event.created|date:"Y-m-d" }}: 
-<a href="">{{ event.title }}</a>
+<a href="{%url single event.id %}">{{ event.title }}</a>
 </p>
 
 {% endfor %}
