--- a/templates/event/event_single.html
+++ b/templates/event/event_single.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<h2><a href="/event/{{event.id}}">{{ event.title }}</a></h2>
+<h2><a href="{%url single event.id %}">{{ event.title }}</a></h2>
 
 <div class="event_meta">
   Event submitted on {{ event.created }}
