Served CSS from media, which is a hack, change it to static later

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,7 @@
 {% block title %}
 <title>USF Event Demo</title>
 {% endblock %}
-<link rel="stylesheet" href="{{ STATIC_URL }}960gs/css/reset.css" />
-<link rel="stylesheet" href="{{ STATIC_URL }}960gs/css/text.css" />
-<link rel="stylesheet" href="{{ STATIC_URL }}960gs/css/960.css" />
-<link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
+<link rel="stylesheet" href="/webhost_media/static/style.css" />
 </head>
 
 <body>
