Refined event post template

--- a/media/static/style.css
+++ b/media/static/style.css
@@ -185,7 +185,7 @@ img {
 body {
   /*background-color: #E7E7E2;*/
   background-color: #eef0f2;
-  background-image: url(http://i.imgur.com/SKcma4J.jpg);
+  background-image: url(http://subtlepatterns.com/patterns/white_wall_hash.png);
   background-repeat: repeat;
 }
 body, input, textarea {
