--- a/media/static/style.css
+++ b/media/static/style.css
@@ -180,12 +180,12 @@ img {
 }
 
 
-/* MangaTalk global */
+/* Global */
 
 body {
   /*background-color: #E7E7E2;*/
-  background-color: #eef0f2;
-  background-image: url(http://subtlepatterns.com/patterns/white_wall_hash.png);
+  background-color: white;
+  background-image: url(bgww.png);
   background-repeat: repeat;
 }
 body, input, textarea {
@@ -232,14 +232,6 @@ a:hover {
   background-color: rgba(0, 0, 0, 0.7);
   border-bottom: 2px solid #ce5333;
   width: 100%; 
-}
-
-.layout-tophero,
-.layout-hero {
-  background-image: url('http://fc01.deviantart.net/fs70/i/2012/311/d/8/the_world__s_finest_by_thegerjoos-d5kbxrx.jpg');
-  background-position: right-top;
-  height: 250px;
-  width: 100%;
 }
 
 .layout-main-wrap { /* #main */
@@ -328,6 +320,11 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
 -------------------------------------------------------------- */
 
 /* Header related */
+.site-logo-img {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 0 0 20px;
+}
 .site-header { /* #masthead */
   margin: 0 auto;
   max-width: 1240px;
