--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <div class="layout-main-inner-wrap">
     
     <aside class="layout-sidebar-wrap">
-        <h1><a href="/events">USF Event Functional Demo</a></h1>
+        <a href="/events"><h1><img src="/webhost_media/static/gc_logo.png" class="site-logo-img"></h1></a>
         <h4><a href="/admin">Superuser Login</a></h4>
         <h4><a href="/">Normal user profile</a></h4>
         {% if request.user.is_authenticated %}
