--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,23 @@
 <div class="layout-page-wrap">
     
     <header class="layout-header-wrap">
-    Header, search here
+    <div class="layout-main-wrap">
+    
+        <!-- Currently search does not work -->
+        <form role="search" method="get" id="searchform" action="/">
+          <input id="searchform-text" type="text" value="" name="s" id="s" />
+          <input id="searchform-submit" type="submit" id="searchsubmit" value="Search" />
+        </form>
+        
+    </div><!-- .layout-main-wrap -->
     </header><!-- .layout-header-wrap -->
     
     <header class="layout-subheader-wrap">
     Subheader here
     </header><!-- .layout-subheader-wrap -->
+    
         
-    <div class="layout-main-wrap">
+    <div class="layout-main-wrap" style="margin-top: 30px;">
     <div class="layout-main-inner-wrap">
     
     <aside class="layout-sidebar-wrap">
