--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,8 @@
     
 
     <aside class="layout-sidebar-wrap">
-        <h1>Second sidebar here</h1>
+        <a href="/events"><h1><img src="/webhost_media/static/gc_logo.png" class="site-logo-img"></h1></a>
+        <h1>My events</h1>
     </aside><!-- .layout-sidebar-wrap -->    
     
     
