--- a/media/static/style.css
+++ b/media/static/style.css
@@ -401,17 +401,20 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
   color: #000;
 }
 .entry-header {
-  background-color: #F5F5F5;
+  background-color: #508373;
   border-bottom: 1px solid #d0d0d0;
   /*border-top: 2px solid #ce5333;*/
 /*  font-size: 16px;
   font-style: bold;*/
   text-align: center;
 }
+h1.entry-title a {
+  color: white;
+}
 h1.entry-title {
+  font-size: 21px;
   font-weight: bold;
-  padding: 20px 20px 0px;  
-  text-shadow: 0px 1px 1px #FF9999;
+  padding: 10px;  
 }
 .entry-meta {
   color: #999;
@@ -443,9 +446,6 @@ h1.entry-title {
 
 
 /* Entry related */
-.post-item {
-  position: relative;
-}
 .entry-masthead { /* This is where the feature image lies */
   background-attachment: scroll;
   background-position: center; 
