--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <title>USF Event Demo</title>
 {% endblock %}
 <link rel="stylesheet" href="/webhost_media/static/style.css" />
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 
 <body>
