Fixing masonry bug

--- a/templates/event/event_listview.html
+++ b/templates/event/event_listview.html
@@ -15,7 +15,7 @@ $(function(){
 <div id="layout-posts-masonry">
 {% for event in events %}
 
-<article class="main-item-block main-item-style post-item">
+<div class="main-item-block main-item-style post-item">
    
     <img src="/webhost_media/{{event.image1}}" width="250px">
     
@@ -29,7 +29,7 @@ $(function(){
         </h3>
     </header>
 
-</article>
+</div>
 
 {% endfor %}
 </div><!-- #layout-posts-masonry -->
