--- a/media/static/style.css
+++ b/media/static/style.css
@@ -390,6 +390,10 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
 
 /* Entry item related */
 /* This defines the block properties of main-item. */
+.layout-posts-masonry {
+  clear: both;
+  zoom: 1;
+}
 .main-item-block {
   float: left;
   margin: 20px;
