--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
         {% endif %}
         <h4><a href="{%url event.views.archives %}">Event archives</a></h4>
         <h4><a href="{%url event.views.post %}">Post event</a></h4>
+        <h4><a href="{%url event.views.msg_send %}">Send message</a></h4>
     </aside><!-- .layout-sidebar-wrap -->
 
 
