Fixed register form, added register link to base

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -24,6 +24,7 @@
     <input type="checkbox" name="preferences" value="clubs" />Clubs
     </tr>
     </table>
+    <input type="submit" value="Register"/>
 </form>
        
 
