--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     </header><!-- .layout-subheader-wrap -->
     
         
-    <div class="layout-main-wrap" style="margin-top: 30px;">
+    <div class="layout-main-wrap">
     <div class="layout-main-inner-wrap">
     
     <aside class="layout-sidebar-wrap">
@@ -39,6 +39,7 @@
         <h4><a href="{%url accounts.views.logout %}">Normal user logout</a></h4>
         {% else %}
         <h4><a href="{%url accounts.views.login %}">Normal user login</a></h4>
+        <h4><a href="{%url accounts.views.register %}">New user register</a></h4>
         {% endif %}
         <h4><a href="{%url event.views.archives %}">Event archives</a></h4>
         <h4><a href="{%url event.views.post %}">Post event</a></h4>
