--- a/media/static/style.css
+++ b/media/static/style.css
@@ -426,7 +426,6 @@ h1.entry-title a {
 }
 h1.entry-title {
   font-size: 21px;
-  font-weight: bold;
   padding: 10px;  
 }
 .entry-meta {
@@ -434,7 +433,7 @@ h1.entry-title {
   margin: 0 20px 20px;
 }
 .post-item .entry-meta {
-  margin: 5px 20px 20px;
+  margin: 0 20px 10px;
 }
 /* USF EVENT END */
 
