Added headers for listview and single event page

--- a/templates/event/event_listview.html
+++ b/templates/event/event_listview.html
@@ -14,7 +14,7 @@ $(function(){
 });
 </script>
 
-<div class="layout-content-header">
+<div class="layout-listview-header">
     <h1 class="page-hero-text">Upcoming Events</h1>
 </div>
 
