--- a/media/static/style.css
+++ b/media/static/style.css
@@ -264,6 +264,10 @@ a:hover {
   clear: both;
   zoom: 1;
 }
+.layout-entry-content,
+.layout-entry-comments {
+  margin: 20px 0;
+}
 
 
 /* Secondary content */
@@ -345,36 +349,6 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
   margin: 0 auto;
   max-width: 1238px; /* 1+1238+1 = 1240 */
 }
-.site-title-wrap {
-  /*background-color: yellow;*/
-  border-left: 1px solid #d0d0d0;
-  border-right: 1px solid #d0d0d0;
-  float: left;
-  position: relative;
-  width: 398px; /* 1+398+1 = 400 */
-}
-.site-title {
-  font-size: 21px;
-  font-weight: 100;
-  /*line-height: 45px;*/  /* Use this to control height of header */
-  /*padding: 0 20px;  */
-  text-transform: uppercase;
-}
-.sitename-cn {
-  font-family: "Microsoft Yahei","冬青黑体简体中文 w3","黑体", serif;
-  font-size: 18px;
-  font-weight: bold;
-}
-.sub-title {
-  color: #FFF;
-  font-family: "Microsoft Yahei","冬青黑体简体中文 w3","黑体", serif;
-  font-size: 32px;
-  font-weight: 100;
-  letter-spacing: 0.1em;
-  line-height: 75px;
-  padding: 0 20px;  
-  text-transform: uppercase;
-}
 .external-nav{
   /*background-color: teal;*/
   float: right;
@@ -443,6 +417,19 @@ h1.entry-title {
 }
 .post-item .entry-meta {
   margin: 0 20px 10px;
+}
+
+/* Entry content related */
+.entry-content {
+  float: left;
+}
+.layout-entry-content .event-meta {
+  margin: 0 0 20px;
+}
+.entry-image {
+  float: left;
+  margin-right: 20px;
+  width: 500px;
 }
 /* USF EVENT END */
 
@@ -601,7 +588,6 @@ img.avatar {
 
 /* Entry content related */
 .entry-content {
-  margin: 30px; 
 }
 #page-content {
   margin: 30px;
