--- a/media/static/style.css
+++ b/media/static/style.css
@@ -266,7 +266,7 @@ a:hover {
 }
 .layout-entry-content,
 .layout-entry-comments {
-  margin: 20px 0;
+  margin: 30px 0;
 }
 
 
@@ -381,6 +381,7 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
 .page-subhero-text {
   font-size: 21px;
   font-weight: 500;
+  margin: 0 0 20px;
   text-transform: uppercase;
 }
 
@@ -430,6 +431,9 @@ h1.entry-title {
   float: left;
   margin-right: 20px;
   width: 500px;
+}
+.entry-comment {
+  margin: 10px 0;
 }
 /* USF EVENT END */
 
